# fillet

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/base/: tui.bat  tui.sh
src/fillet/: __main__.py  _version.py  cli.py  data_structures.py  file_io.py  logging.py  main.py  trimmer.py
